[package]
name = "rusty-tetris"
version = "0.0.9"
edition = "2021"
authors = [
    "bachm",
    "bvssvni <bvssvni@gmail.com>",
    "phideg <deglerp@googlemail.com>",
]

[[bin]]
name = "rusty_tetris"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
find_folder = "0.3.0"
piston-music = "0.26.0"
piston_window = "0.145.0"
rand = "0.9.2"
