[package]
name = "rusty-tetris"
version = "0.0.9"
edition = "2024"
authors = [
    "bachm",
    "bvssvni <bvssvni@gmail.com>",
    "phideg <deglerp@googlemail.com>",
]

[[bin]]
name = "rusty_tetris"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25"
piston_window = { git = "https://github.com/phideg/piston_window.git", branch = "fix/surface-alpha-mode" }
rand = "0.9.2"
sdl2 = { version = "0.38.0", features = ["mixer"] }
